modificações necessarias